src/flutter_recorder.h

// leakage: Weight decay factor (0.99-1.0). Set to 1.0 for no decay.
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setVssLeakage(float lambda);
// alpha: Smoothing factor for VSS statistics (0.9-0.999).
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setVssAlpha(float alpha);
// Getters for current values
FFI_PLUGIN_EXPORT float flutter_recorder_aec_getVssMuMax();
FFI_PLUGIN_EXPORT float flutter_recorder_aec_getVssLeakage();
FFI_PLUGIN_EXPORT float flutter_recorder_aec_getVssAlpha();
// Filter length control (2048, 4096, 8192 recommended)
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setFilterLength(int length);
FFI_PLUGIN_EXPORT int flutter_recorder_aec_getFilterLength();
// Position-based sync for sample-accurate AEC
// Get total frames written to reference buffer (output side)
FFI_PLUGIN_EXPORT size_t flutter_recorder_aec_getOutputFrameCount();
// Get total frames captured by recorder (input side)
FFI_PLUGIN_EXPORT size_t flutter_recorder_aec_getCaptureFrameCount();
// Record frame counters at calibration start
FFI_PLUGIN_EXPORT void flutter_recorder_aec_recordCalibrationFrameCounters();
// Set calibrated offset: captureFrame - offset = outputFrame
FFI_PLUGIN_EXPORT void flutter_recorder_aec_setCalibratedOffset(int64_t offset);
// Get current calibrated offset
FFI_PLUGIN_EXPORT int64_t flutter_recorder_aec_getCalibratedOffset();
/////////////////////////
/// iOS Hardware Control
/////////////////////////
FFI_PLUGIN_EXPORT void flutter_recorder_ios_force_speaker_output(bool enabled);
/////////////////////////
/// Aligned Calibration Capture (frame-aligned signals from processAudio)
/////////////////////////
FFI_PLUGIN_EXPORT void
flutter_recorder_aec_startAlignedCalibrationCapture(size_t maxSamples);
FFI_PLUGIN_EXPORT void flutter_recorder_aec_stopAlignedCalibrationCapture();
FFI_PLUGIN_EXPORT int flutter_recorder_aec_runAlignedCalibrationWithImpulse(
    unsigned int sampleRate, int *outDelaySamples, float *outDelayMs,
    float *outGain, float *outCorrelation, int *outImpulseLength,
    int64_t *outCalibratedOffset, int signalType);
/////////////////////////
/// Native Scheduler
/// Sample-accurate timing for recording start/stop in audio callback
/////////////////////////

// Reset the native scheduler state
FFI_PLUGIN_EXPORT void flutter_recorder_scheduler_reset();
// Set base loop parameters for quantization
FFI_PLUGIN_EXPORT void flutter_recorder_scheduler_setBaseLoop(int64_t loopFrames,
                                                               int64_t loopStartFrame);
// Clear base loop (free recording mode)
FFI_PLUGIN_EXPORT void flutter_recorder_scheduler_clearBaseLoop();
// Schedule quantized recording start
// Returns event ID (0 if failed)
FFI_PLUGIN_EXPORT uint32_t flutter_recorder_scheduler_scheduleStart(const char* path);
// Schedule quantized recording stop
// Returns event ID (0 if failed)
FFI_PLUGIN_EXPORT uint32_t flutter_recorder_scheduler_scheduleStop(int64_t startFrame);
// Schedule event at specific frame
// action: 0=None, 1=StartRecording, 2=StopRecording, 3=StartPlayback, 4=StopPlayback
FFI_PLUGIN_EXPORT uint32_t flutter_recorder_scheduler_scheduleEvent(
    int action, int64_t targetFrame, const char* path);