lib/src/bindings/flutter_recorder_bindings_generated.dart


  late final _flutter_recorder_aec_setVssLeakagePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_aec_setVssLeakage');
  late final _flutter_recorder_aec_setVssLeakage =
      _flutter_recorder_aec_setVssLeakagePtr
          .asFunction<void Function(double)>();

  /// alpha: Smoothing factor for VSS statistics (0.9-0.999).
  void flutter_recorder_aec_setVssAlpha(
    double alpha,
  ) {
    return _flutter_recorder_aec_setVssAlpha(
      alpha,
    );
  }

  late final _flutter_recorder_aec_setVssAlphaPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Float)>>(
          'flutter_recorder_aec_setVssAlpha');
  late final _flutter_recorder_aec_setVssAlpha =
      _flutter_recorder_aec_setVssAlphaPtr.asFunction<void Function(double)>();

  /// Getters for current values
  double flutter_recorder_aec_getVssMuMax() {
    return _flutter_recorder_aec_getVssMuMax();
  }

  late final _flutter_recorder_aec_getVssMuMaxPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
          'flutter_recorder_aec_getVssMuMax');
  late final _flutter_recorder_aec_getVssMuMax =
      _flutter_recorder_aec_getVssMuMaxPtr.asFunction<double Function()>();

  double flutter_recorder_aec_getVssLeakage() {
    return _flutter_recorder_aec_getVssLeakage();
  }

  late final _flutter_recorder_aec_getVssLeakagePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
          'flutter_recorder_aec_getVssLeakage');
  late final _flutter_recorder_aec_getVssLeakage =
      _flutter_recorder_aec_getVssLeakagePtr.asFunction<double Function()>();

  double flutter_recorder_aec_getVssAlpha() {
    return _flutter_recorder_aec_getVssAlpha();
  }

  late final _flutter_recorder_aec_getVssAlphaPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function()>>(
          'flutter_recorder_aec_getVssAlpha');
  late final _flutter_recorder_aec_getVssAlpha =
      _flutter_recorder_aec_getVssAlphaPtr.asFunction<double Function()>();

  /// Filter length control (2048, 4096, 8192 recommended)
  void flutter_recorder_aec_setFilterLength(
    int length,
  ) {
    return _flutter_recorder_aec_setFilterLength(
      length,
    );
  }

  late final _flutter_recorder_aec_setFilterLengthPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
          'flutter_recorder_aec_setFilterLength');
  late final _flutter_recorder_aec_setFilterLength =
      _flutter_recorder_aec_setFilterLengthPtr.asFunction<void Function(int)>();

  int flutter_recorder_aec_getFilterLength() {
    return _flutter_recorder_aec_getFilterLength();
  }

  late final _flutter_recorder_aec_getFilterLengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flutter_recorder_aec_getFilterLength');
  late final _flutter_recorder_aec_getFilterLength =
      _flutter_recorder_aec_getFilterLengthPtr.asFunction<int Function()>();

  /// Position-based sync for sample-accurate AEC
  /// Get total frames written to reference buffer (output side)
  int flutter_recorder_aec_getOutputFrameCount() {
    return _flutter_recorder_aec_getOutputFrameCount();
  }

  late final _flutter_recorder_aec_getOutputFrameCountPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
          'flutter_recorder_aec_getOutputFrameCount');
  late final _flutter_recorder_aec_getOutputFrameCount =
      _flutter_recorder_aec_getOutputFrameCountPtr.asFunction<int Function()>();

  /// Get total frames captured by recorder (input side)
  int flutter_recorder_aec_getCaptureFrameCount() {
    return _flutter_recorder_aec_getCaptureFrameCount();
  }

  late final _flutter_recorder_aec_getCaptureFrameCountPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
          'flutter_recorder_aec_getCaptureFrameCount');
  late final _flutter_recorder_aec_getCaptureFrameCount =
      _flutter_recorder_aec_getCaptureFrameCountPtr
          .asFunction<int Function()>();

  /// Record frame counters at calibration start
  void flutter_recorder_aec_recordCalibrationFrameCounters() {
    return _flutter_recorder_aec_recordCalibrationFrameCounters();
  }

  late final _flutter_recorder_aec_recordCalibrationFrameCountersPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_recordCalibrationFrameCounters');
  late final _flutter_recorder_aec_recordCalibrationFrameCounters =
      _flutter_recorder_aec_recordCalibrationFrameCountersPtr
          .asFunction<void Function()>();

  /// Set calibrated offset: captureFrame - offset = outputFrame
  void flutter_recorder_aec_setCalibratedOffset(
    int offset,
  ) {
    return _flutter_recorder_aec_setCalibratedOffset(
      offset,
    );
  }

  late final _flutter_recorder_aec_setCalibratedOffsetPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'flutter_recorder_aec_setCalibratedOffset');
  late final _flutter_recorder_aec_setCalibratedOffset =
      _flutter_recorder_aec_setCalibratedOffsetPtr
          .asFunction<void Function(int)>();

  /// Get current calibrated offset
  int flutter_recorder_aec_getCalibratedOffset() {
    return _flutter_recorder_aec_getCalibratedOffset();
  }

  late final _flutter_recorder_aec_getCalibratedOffsetPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
          'flutter_recorder_aec_getCalibratedOffset');
  late final _flutter_recorder_aec_getCalibratedOffset =
      _flutter_recorder_aec_getCalibratedOffsetPtr.asFunction<int Function()>();

  /// //////////////////////
  /// iOS Hardware Control
  /// //////////////////////
  void flutter_recorder_ios_force_speaker_output(
    bool enabled,
  ) {
    return _flutter_recorder_ios_force_speaker_output(
      enabled,
    );
  }

  late final _flutter_recorder_ios_force_speaker_outputPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Bool)>>(
          'flutter_recorder_ios_force_speaker_output');
  late final _flutter_recorder_ios_force_speaker_output =
      _flutter_recorder_ios_force_speaker_outputPtr
          .asFunction<void Function(bool)>();

  /// //////////////////////
  /// Aligned Calibration Capture (frame-aligned signals from processAudio)
  /// //////////////////////
  void flutter_recorder_aec_startAlignedCalibrationCapture(
    int maxSamples,
  ) {
    return _flutter_recorder_aec_startAlignedCalibrationCapture(
      maxSamples,
    );
  }

  late final _flutter_recorder_aec_startAlignedCalibrationCapturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Size)>>(
          'flutter_recorder_aec_startAlignedCalibrationCapture');
  late final _flutter_recorder_aec_startAlignedCalibrationCapture =
      _flutter_recorder_aec_startAlignedCalibrationCapturePtr
          .asFunction<void Function(int)>();

  void flutter_recorder_aec_stopAlignedCalibrationCapture() {
    return _flutter_recorder_aec_stopAlignedCalibrationCapture();
  }

  late final _flutter_recorder_aec_stopAlignedCalibrationCapturePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_aec_stopAlignedCalibrationCapture');
  late final _flutter_recorder_aec_stopAlignedCalibrationCapture =
      _flutter_recorder_aec_stopAlignedCalibrationCapturePtr
          .asFunction<void Function()>();

  int flutter_recorder_aec_runAlignedCalibrationWithImpulse(
    int sampleRate,
    ffi.Pointer<ffi.Int> outDelaySamples,
    ffi.Pointer<ffi.Float> outDelayMs,
    ffi.Pointer<ffi.Float> outGain,
    ffi.Pointer<ffi.Float> outCorrelation,
    ffi.Pointer<ffi.Int> outImpulseLength,
    ffi.Pointer<ffi.Int64> outCalibratedOffset,
    int signalType,
  ) {
    return _flutter_recorder_aec_runAlignedCalibrationWithImpulse(
      sampleRate,
      outDelaySamples,
      outDelayMs,
      outGain,
      outCorrelation,
      outImpulseLength,
      outCalibratedOffset,
      signalType,
    );
  }

  late final _flutter_recorder_aec_runAlignedCalibrationWithImpulsePtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Int Function(
                      ffi.UnsignedInt,
                      ffi.Pointer<ffi.Int>,
                      ffi.Pointer<ffi.Float>,
                      ffi.Pointer<ffi.Float>,
                      ffi.Pointer<ffi.Float>,
                      ffi.Pointer<ffi.Int>,
                      ffi.Pointer<ffi.Int64>,
                      ffi.Int)>>(
          'flutter_recorder_aec_runAlignedCalibrationWithImpulse');
  late final _flutter_recorder_aec_runAlignedCalibrationWithImpulse =
      _flutter_recorder_aec_runAlignedCalibrationWithImpulsePtr.asFunction<
          int Function(
              int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Float>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int64>,
              int)>();

  /// Reset the native scheduler state
  void flutter_recorder_scheduler_reset() {
    return _flutter_recorder_scheduler_reset();
  }

  late final _flutter_recorder_scheduler_resetPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_scheduler_reset');
  late final _flutter_recorder_scheduler_reset =
      _flutter_recorder_scheduler_resetPtr.asFunction<void Function()>();

  /// Set base loop parameters for quantization
  void flutter_recorder_scheduler_setBaseLoop(
    int loopFrames,
    int loopStartFrame,
  ) {
    return _flutter_recorder_scheduler_setBaseLoop(
      loopFrames,
      loopStartFrame,
    );
  }

  late final _flutter_recorder_scheduler_setBaseLoopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Int64)>>(
          'flutter_recorder_scheduler_setBaseLoop');
  late final _flutter_recorder_scheduler_setBaseLoop =
      _flutter_recorder_scheduler_setBaseLoopPtr
          .asFunction<void Function(int, int)>();

  /// Clear base loop (free recording mode)
  void flutter_recorder_scheduler_clearBaseLoop() {
    return _flutter_recorder_scheduler_clearBaseLoop();
  }

  late final _flutter_recorder_scheduler_clearBaseLoopPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'flutter_recorder_scheduler_clearBaseLoop');
  late final _flutter_recorder_scheduler_clearBaseLoop =
      _flutter_recorder_scheduler_clearBaseLoopPtr
          .asFunction<void Function()>();

  /// Schedule quantized recording start
  /// Returns event ID (0 if failed)
  int flutter_recorder_scheduler_scheduleStart(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _flutter_recorder_scheduler_scheduleStart(
      path,
    );
  }

  late final _flutter_recorder_scheduler_scheduleStartPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Char>)>>(
          'flutter_recorder_scheduler_scheduleStart');
  late final _flutter_recorder_scheduler_scheduleStart =
      _flutter_recorder_scheduler_scheduleStartPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Schedule quantized recording stop
  /// Returns event ID (0 if failed)
  int flutter_recorder_scheduler_scheduleStop(
    int startFrame,
  ) {
    return _flutter_recorder_scheduler_scheduleStop(
      startFrame,
    );
  }

  late final _flutter_recorder_scheduler_scheduleStopPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Int64)>>(
          'flutter_recorder_scheduler_scheduleStop');
  late final _flutter_recorder_scheduler_scheduleStop =
      _flutter_recorder_scheduler_scheduleStopPtr
          .asFunction<int Function(int)>();

  /// Schedule event at specific frame
  /// action: 0=None, 1=StartRecording, 2=StopRecording, 3=StartPlayback, 4=StopPlayback
  int flutter_recorder_scheduler_scheduleEvent(
    int action,
    int targetFrame,
    ffi.Pointer<ffi.Char> path,
  ) {
    return _flutter_recorder_scheduler_scheduleEvent(
      action,
      targetFrame,
      path,
    );
  }
